--- a/src/components/blogs/Blogs.css
+++ b/src/components/blogs/Blogs.css
@@ -1,5 +1,42 @@
 .blogInfo img {
   height: 300px;
-  width: 90%;
+  /* width: 90%; */
   border-radius: 10px;
+}
+
+.author-left img {
+  width: 50px;
+  height: 50px;
+}
+.author {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 100px;
+}
+.author-left {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.auth-info {
+  padding-left: 20px;
+}
+.blogInfo {
+  width: 90%;
+  border-bottom: 1px rgb(212, 212, 212) solid;
+  margin-bottom: 10px;
+  /* margin-right: 100px; */
+}
+.markbtn {
+  margin: 0px;
+  padding: 0px;
+  font-weight: 700;
+  border: none;
+  background-color: white;
+  color: #6047ec;
+  text-decoration: underline;
+}
+.markbtn:hover {
+  color: rgb(22, 21, 22);
 }
